<resources>
    <string name="app_name">WalkInClinic</string>
    <string name="appName">Walk In Clinic!</string>
    <string name="continue1">Continue!</string>
    <string name="welcomeBack">Welcome Back!</string>
    <string name="username">Username ...</string>
    <string name="password">Password ...</string>
    <string name="login">Log In!</string>
    <string name="newUserMessage">New User ?</string>
    <string name="registerNow">Register Now!</string>
    <string name="patient">Patient !</string>
    <string name="employee">Employee !</string>
    <string name="selectType">Select Account Type!</string>
    <string name="firstName">First Name..</string>
    <string name="lastName">Last Name ..</string>
    <string name="phoneNum">Phone Number ...</string>
    <string name="submitEntries">Submit!</string>
    <string name="address">Address...</string>
    <string name="email">E-mail...</string>
</resources>
