<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectAccountType">

    <TextView
        android:id="@+id/mainMessage2"
        android:layout_width="293dp"
        android:layout_height="59dp"
        android:layout_marginTop="45dp"
        android:text="@string/selectType"
        android:textColor="#0C090A"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/patientSelected"
        android:layout_width="175dp"
        android:layout_height="125dp"
        android:layout_marginTop="100dp"
        android:text="@string/patient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainMessage2" />

    <Button
        android:id="@+id/employeeSelected"
        android:layout_width="175dp"
        android:layout_height="125dp"
        android:text="@string/employee"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patientSelected"
        app:layout_constraintVertical_bias="0.414" />
</androidx.constraintlayout.widget.ConstraintLayout>